docs/api/qiskit/0.33/qiskit.providers.aer.library.SaveExpectationValueVariance.mdx
---
title: SaveExpectationValueVariance (v0.33)
description: API reference for qiskit.providers.aer.library.SaveExpectationValueVariance in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.library.SaveExpectationValueVariance
---

# SaveExpectationValueVariance

<Class id="qiskit.providers.aer.library.SaveExpectationValueVariance" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.9/qiskit/providers/aer/library/save_instructions/save_expectation_value.py" signature="SaveExpectationValueVariance(operator, label='expectation_value_variance', unnormalized=False, pershot=False, conditional=False)" modifiers="class">
  Bases: `qiskit.providers.aer.library.save_instructions.save_data.SaveAverageData`

  Save expectation value and variance of an operator.

  Instruction to save the expectation value and variance of a Hermitian operator.

  The expectation value of a Hermitian operator $H$ for a simulator in quantum state :math\`rho\`is given by $\langle H\rangle = \mbox{Tr}[H.\rho]$. The variance is given by $\sigma^2 = \langle H^2 \rangle - \langle H \rangle>^2$.

  **Parameters**

  *   **operator** ([*Pauli*](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli")  *or*[*SparsePauliOp*](qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")  *or*[*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Hermitian operator.
  *   **label** (*str*) – the key for retrieving saved data from results.
  *   **unnormalized** (*bool*) – If True return save the unnormalized accumulated or conditional accumulated expectation value over all shot \[Default: False].
  *   **pershot** (*bool*) – if True save a list of expectation values for each shot of the simulation rather than the average over all shots \[Default: False].
  *   **conditional** (*bool*) – if True save the average or pershot data conditional on the current classical register values \[Default: False].

  **Raises**

  **ExtensionError** – if the input operator is invalid or not Hermitian.

  <Admonition title="Note" type="note">
    This instruction can be directly appended to a circuit using the [`save_expectation_value()`](qiskit.providers.aer.library.save_expectation_value "qiskit.providers.aer.library.save_expectation_value") circuit method.
  </Admonition>

  ## Methods

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.add_decomposition" signature="SaveExpectationValueVariance.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.assemble" signature="SaveExpectationValueVariance.assemble()">
    Return the QasmQobjInstruction for the intructions.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.broadcast_arguments" signature="SaveExpectationValueVariance.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.c_if" signature="SaveExpectationValueVariance.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-copy" />

  ### copy

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.copy" signature="SaveExpectationValueVariance.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.inverse" signature="SaveExpectationValueVariance.inverse()">
    Special case. Return self.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.is_parameterized" signature="SaveExpectationValueVariance.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.mirror" signature="SaveExpectationValueVariance.mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.qasm" signature="SaveExpectationValueVariance.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.repeat" signature="SaveExpectationValueVariance.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.reverse_ops" signature="SaveExpectationValueVariance.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.soft_compare" signature="SaveExpectationValueVariance.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvaluevariance-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.providers.aer.library.SaveExpectationValueVariance.validate_parameter" signature="SaveExpectationValueVariance.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValueVariance.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValueVariance.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValueVariance.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValueVariance.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValueVariance.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValueVariance.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValueVariance.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

